package com.kna.vstay.payment;

public class MomoPaymentStrategy implements PaymentStrategy {
}
