package com.kna.vstay.payment;

public class PaymentStrategyFactory {
}
